# audio_tts_1

./: README.md  package.xml  setup.py
audio_tts/: audio_tts_node.py  custom_tts.py
audio_tts/processed/sample_iena_3min_v2_SMG1OILD_^6Ewv3qQ/: se.pth
audio_tts/processed/sample_iena_v2_2+V2pE3kcuCN9P+r/: se.pth
audio_tts/processed/sample_sunhi_v2_cR+erLqFQwzl6qxl/: se.pth
